--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,35 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  background: #000;
+  color: #fff;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@media (max-width: 1024) {
+  body,
+  html {
+    overflow-x: hidden;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .responsive-button {
+    min-width: -webkit-fill-available;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities {
+  .bg-custom-gradient {
+    background: linear-gradient(
+      0deg,
+      #000,
+      rgba(0, 0, 0, 0.9) 30%,
+      rgba(0, 0, 0, 0.7) 50%,
+      hsla(0, 0%, 100%, 0)
+    );
+  }
+
+  .header-custom-gradient {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.8), transparent);
+  }
 }
